[gd_scene load_steps=2 format=3 uid="uid://cpp37o7600nho"]

[ext_resource type="Script" path="res://scripts/scenes/card.gd" id="1_p7luq"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -348.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p7luq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.309804, 0.309804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "666"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unleash all demons"

[node name="EffectLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 200)
layout_mode = 2
size_flags_vertical = 3
text = "Unleash all demons, with the power of THE DEBUG!"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="card_played" from="." to="." method="_on_card_played"]
